@@ -52,6 +52,7 @@ path = [path {...
     fullfile(misc, 'config'  ) ...
     fullfile(misc, 'design'  ) ...
     fullfile(misc, 'dist'    ) ...
+    fullfile(misc, 'distrib' ) ...    
     fullfile(misc, 'error'   ) ...
     fullfile(misc, 'options' ) ...
     fullfile(misc, 'parallel') ...    
