@@ -1,0 +1,71 @@
+README Copyright Notice
+
+    Copyright (C) 2013 SUPELEC
+
+    Author:  Julien Bect  <julien.bect@supelec.fr>
+
+README Copying Permission Statement
+
+    This file is part of
+
+            STK: a Small (Matlab/Octave) Toolbox for Kriging
+               (http://sourceforge.net/projects/kriging)
+
+    STK is free software: you can redistribute it and/or modify it under
+    the terms of the GNU General Public License as published by the Free
+    Software Foundation,  either version 3  of the License, or  (at your
+    option) any later version.
+
+    STK is distributed  in the hope that it will  be useful, but WITHOUT
+    ANY WARRANTY;  without even the implied  warranty of MERCHANTABILITY
+    or FITNESS  FOR A  PARTICULAR PURPOSE.  See  the GNU  General Public
+    License for more details.
+
+    You should  have received a copy  of the GNU  General Public License
+    along with STK.  If not, see <http://www.gnu.org/licenses/>.
+
+--------------------------------------------------------------------------------
+
+What you will find in the 'distrib' directory
+=============================================
+
+This directory contains replacements for the cdf/pdf/rnd/... functions.
+
+To avoid name clashes, a different naming scheme is used for the replacement
+functions provided here. For instance:
+
+ * distrib_normal_cdf is a replacement for normcdf
+ * distrib_normal_pdf -------------------- normpdf
+ * distrib_student_cdf ------------------- tcdf
+ * distrib_student_pdf ------------------- tpdf
+ * ...
+
+
+Long term goal
+==============
+
+These functions are general purpose statistical functions, that are not
+inherently part of STK and might one day be released as an independent
+package. This is why they do not have their name prefixed by stk_.
+
+
+Why we want/need these functions
+================================
+
+There are several reasons.
+
+First, problems (bugs, numerical inaccuracies...) are sometimes found in these
+functions and fixed in later releases of the corresponding software. To ensure
+that STK runs properly on all supported releases of GNU Octave and Matlab, we
+need to provide replacement for the faulty functions.
+
+Second, we want to avoid having a depency on Mathworks' Statistical Toolbox,
+which where these functions live for Matlab users (the situation is different
+with GNU Octave, since these functions are shipped with Octave itself, not in a
+separate package).
+
+Finally, having our own set of functions allows to provide some extended
+functionalities, for example: a) more flexibility in the way that parameter
+arguments are handles (broadcasting-like singleton expansion) and b) additional
+returned value q = 1 - p for cdf functions (which allow to compute p * (1 - p) =
+p * q with a good numerical accuracy even when p is close to 1).
